Add Maven dependencies for persistence
dependencies are added for 
- javax.persistence (JPA API)
- eclipselink (JPA implementation)
- apache DBCP (basic datasource)
- derby ([in-memory] database)

Signed-off-by: Adrian Goerler <adrian.goerler@sap.com>

--- a/gb_web/pom.xml
+++ b/gb_web/pom.xml
@@ -46,79 +46,57 @@
 			<version>${sap.cloud.ui5.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-dbcp</groupId>
+			<artifactId>commons-dbcp</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>javax.persistence</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.jpa</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.core</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.10.1.1</version>
+		</dependency>
+
 		<!-- advanced UI5 libs -->
-		<!--
-		<dependency>
-			<groupId>com.sap.ui5.makit</groupId>
-			<artifactId>com.sap.ui5.makit</artifactId>
-			<version>${sap.cloud.ui5.version}</version>
-			<scope>system</scope>
-			<systemPath>${eclipse.path}/plugins/com.sap.ui5.makit_${sap.cloud.ui5.version}.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.sap.ui5.mobile</groupId>
-			<artifactId>com.sap.ui5.mobile</artifactId>
-			<version>${sap.cloud.ui5.version}</version>
-			<scope>system</scope>
-			<systemPath>${eclipse.path}/plugins/com.sap.ui5.mobile_${sap.cloud.ui5.version}.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.sap.ui5.richtexteditor</groupId>
-			<artifactId>com.sap.ui5.richtexteditor</artifactId>
-			<version>${sap.cloud.ui5.version}</version>
-			<scope>system</scope>
-			<systemPath>${eclipse.path}/plugins/com.sap.ui5.richtexteditor_${sap.cloud.ui5.version}.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.sap.ui5.table</groupId>
-			<artifactId>com.sap.ui5.table</artifactId>
-			<version>${sap.cloud.ui5.version}</version>
-			<scope>system</scope>
-			<systemPath>${eclipse.path}/plugins/com.sap.ui5.table_${sap.cloud.ui5.version}.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.sap.ui5.themelib_sap_goldreflection</groupId>
-			<artifactId>com.sap.ui5.themelib_sap_goldreflection</artifactId>
-			<version>${sap.cloud.ui5.version}</version>
-			<scope>system</scope>
-			<systemPath>${eclipse.path}/plugins/com.sap.ui5.themelib_sap_goldreflection_${sap.cloud.ui5.version}.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.sap.ui5.themelib_sap_ux</groupId>
-			<artifactId>com.sap.ui5.themelib_sap_ux</artifactId>
-			<version>${sap.cloud.ui5.version}</version>
-			<scope>system</scope>
-			<systemPath>${eclipse.path}/plugins/com.sap.ui5.themelib_sap_ux_${sap.cloud.ui5.version}.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.sap.ui5.utils</groupId>
-			<artifactId>com.sap.ui5.utils</artifactId>
-			<version>${sap.cloud.ui5.version}</version>
-			<scope>system</scope>
-			<systemPath>${eclipse.path}/plugins/com.sap.ui5.utils_${sap.cloud.ui5.version}.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.sap.ui5.ux3</groupId>
-			<artifactId>com.sap.ui5.ux3</artifactId>
-			<version>${sap.cloud.ui5.version}</version>
-			<scope>system</scope>
-			<systemPath>${eclipse.path}/plugins/com.sap.ui5.ux3_${sap.cloud.ui5.version}.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.sap.ui5.visualization</groupId>
-			<artifactId>com.sap.ui5.visualization</artifactId>
-			<version>${sap.cloud.ui5.version}</version>
-			<scope>system</scope>
-			<systemPath>${eclipse.path}/plugins/com.sap.ui5.visualization_${sap.cloud.ui5.version}.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com.sap.ui5.viz</groupId>
-			<artifactId>com.sap.ui5.viz</artifactId>
-			<version>${sap.cloud.ui5.version}</version>
-			<scope>system</scope>
-			<systemPath>${eclipse.path}/plugins/com.sap.ui5.viz_${sap.cloud.ui5.version}.jar</systemPath>
-		</dependency>
-		-->
+		<!-- <dependency> <groupId>com.sap.ui5.makit</groupId> <artifactId>com.sap.ui5.makit</artifactId> 
+			<version>${sap.cloud.ui5.version}</version> <scope>system</scope> <systemPath>${eclipse.path}/plugins/com.sap.ui5.makit_${sap.cloud.ui5.version}.jar</systemPath> 
+			</dependency> <dependency> <groupId>com.sap.ui5.mobile</groupId> <artifactId>com.sap.ui5.mobile</artifactId> 
+			<version>${sap.cloud.ui5.version}</version> <scope>system</scope> <systemPath>${eclipse.path}/plugins/com.sap.ui5.mobile_${sap.cloud.ui5.version}.jar</systemPath> 
+			</dependency> <dependency> <groupId>com.sap.ui5.richtexteditor</groupId> 
+			<artifactId>com.sap.ui5.richtexteditor</artifactId> <version>${sap.cloud.ui5.version}</version> 
+			<scope>system</scope> <systemPath>${eclipse.path}/plugins/com.sap.ui5.richtexteditor_${sap.cloud.ui5.version}.jar</systemPath> 
+			</dependency> <dependency> <groupId>com.sap.ui5.table</groupId> <artifactId>com.sap.ui5.table</artifactId> 
+			<version>${sap.cloud.ui5.version}</version> <scope>system</scope> <systemPath>${eclipse.path}/plugins/com.sap.ui5.table_${sap.cloud.ui5.version}.jar</systemPath> 
+			</dependency> <dependency> <groupId>com.sap.ui5.themelib_sap_goldreflection</groupId> 
+			<artifactId>com.sap.ui5.themelib_sap_goldreflection</artifactId> <version>${sap.cloud.ui5.version}</version> 
+			<scope>system</scope> <systemPath>${eclipse.path}/plugins/com.sap.ui5.themelib_sap_goldreflection_${sap.cloud.ui5.version}.jar</systemPath> 
+			</dependency> <dependency> <groupId>com.sap.ui5.themelib_sap_ux</groupId> 
+			<artifactId>com.sap.ui5.themelib_sap_ux</artifactId> <version>${sap.cloud.ui5.version}</version> 
+			<scope>system</scope> <systemPath>${eclipse.path}/plugins/com.sap.ui5.themelib_sap_ux_${sap.cloud.ui5.version}.jar</systemPath> 
+			</dependency> <dependency> <groupId>com.sap.ui5.utils</groupId> <artifactId>com.sap.ui5.utils</artifactId> 
+			<version>${sap.cloud.ui5.version}</version> <scope>system</scope> <systemPath>${eclipse.path}/plugins/com.sap.ui5.utils_${sap.cloud.ui5.version}.jar</systemPath> 
+			</dependency> <dependency> <groupId>com.sap.ui5.ux3</groupId> <artifactId>com.sap.ui5.ux3</artifactId> 
+			<version>${sap.cloud.ui5.version}</version> <scope>system</scope> <systemPath>${eclipse.path}/plugins/com.sap.ui5.ux3_${sap.cloud.ui5.version}.jar</systemPath> 
+			</dependency> <dependency> <groupId>com.sap.ui5.visualization</groupId> <artifactId>com.sap.ui5.visualization</artifactId> 
+			<version>${sap.cloud.ui5.version}</version> <scope>system</scope> <systemPath>${eclipse.path}/plugins/com.sap.ui5.visualization_${sap.cloud.ui5.version}.jar</systemPath> 
+			</dependency> <dependency> <groupId>com.sap.ui5.viz</groupId> <artifactId>com.sap.ui5.viz</artifactId> 
+			<version>${sap.cloud.ui5.version}</version> <scope>system</scope> <systemPath>${eclipse.path}/plugins/com.sap.ui5.viz_${sap.cloud.ui5.version}.jar</systemPath> 
+			</dependency> -->
 
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
